--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@ main:
      url: /
 #   - title: "About"
 #     url: /about/
-#   - title: "Categories"
-#     url: /categories/
+   - title: "Categories"
+     url: /categories/
