--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
    - title: "Home"
      url: /
-#   - title: "About"
-#     url: /about/
+   - title: "About"
+     url: /about/
    - title: "Categories"
      url: /categories/
